/* Et seisoon van 2016: Tweyds achter Rosberg */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -148,29 +148,29 @@ Nå nen winlosen start an den europeesken tuur, wön Hamilton den britsken Grand
 ==== Et seisoon van 2016: Tweyds achter Rosberg ====
 By de oapening van et seisoon, den australisken Grand Prix, kwalificereden Hamilton sich vöär de eyrste startpositsy. Skonwal had hy nen slechten start van de race mår hy herstelleden sich en endigeden tweyds achter synen Mercedesteammåt Nico Rosberg. In de tweyde race van et seisoon, den Grand Prix van Bahrein, kwalificereden Hamilton sich weaderum vöär de eyrste startpositsy. In de eyrste runde was der skonwal nen botsing tüsken hem en Bottas, wårvöär Bottas kreg nen strav wårby hy döär mocht ryden. Hamilton herstelleden sich en beendigeden de race as darden achter Rosberg en Räikkönen. In de völgende race, den chineesken Grand Prix, had Hamilton gin tyd neaderesetted in de kwalifikatsy en starteden hy achter in et startveld. Hy kwam tydens de race töt an de vyvde positsy mår wyr inehåled döär Räikkönen en Ricciardo teagen et ende van de race um as seavenden too endigen. In de veerde race van et seisoon, den rüssisken Grand Prix, had Hamilton gin tyd neaderesetted in et darden deal van de kwalifikatsy, wårdöär hy in tynde positsy starteden. Hy endigeden tweyds achter Rosberg, undanks dat hy nul wåterdrük had in de låtste 16 runden.
 
-In de völgende race in Spanje leggeden Hamilton beslag up de eyrste startpositsy, vöär Rosberg. Beyde koureurs hadden nen gooden start, mår Rosberg håleden Hamilton in by de buutenkante van buchte 1. In de völgende pår buchten kwam den wågen van Rosberg terecht in nen inkorrekten stand van den motor vanweagen nen fout den den Düütsker had emåked in de  startrunde. Dat beteakeneden dat hy langsåmer as Hamilton uut buchte 3 kwam en Hamilton van hem de leiding oavernam. Rosberg blokkereden den döärgang en dwung Hamilton når et gras wår hy de kontrole verloor, hy dråieden når Rosberg too en dårdöär lagen beyde koureurs uut de race. De jüry sag et as nen raceincident en beslöät dat Hamilton gelyk had  med synen oavernåmepoging terwyl hy uutendelik 17 kilomeater per ure rapper uut buchte 3 kwam as Rosberg. De botsing tüsken Hamilton en Rosberg in de oapeningsrunde beteakeneden dat beyde Mercedeswågen sich direkt terügtrökken. De jüry beslöät achterav dat de botsing nen raceincident was.
+In de völgende race in Spanje leggeden Hamilton beslag up de eyrste startpositsy, vöär Rosberg. Beyde koureurs hadden nen gooden start, mår Rosberg håleden Hamilton in by de buutenkante van buchte 1. In de völgende pår buchten kwam den wågen van Rosberg terecht in nen inkorrekten stand van den motor vanweagen nen fout den den Düütsker had emåked in de startrunde. Dat beteakeneden dat hy langsåmer as Hamilton uut buchte 3 kwam en Hamilton van hem de leiding oavernam. Rosberg blokkereden den döärgang en dwung Hamilton når et gras wår hy de kontrole verloor, hy dråieden når Rosberg too en dårdöär lagen beyde koureurs uut de race. De jüry sag et as nen raceincident en beslöät dat Hamilton gelyk had  med synen oavernåmepoging terwyl hy uutendelik 17 kilomeater per ure rapper uut buchte 3 kwam as Rosberg. De botsing tüsken Hamilton en Rosberg in de oapeningsrunde beteakeneden dat beyde Mercedeswågen sich direkt terügtrökken. De jüry beslöät achterav dat de botsing nen raceincident was.
 [[Bestaand:Hamilton_-_2016_Monaco_GP_02.jpg|links|duum|Hamilton underweg når de oaverwinning in den Grouten Prys van Monako van 2016]]
-Hamilton, den now 43 pünten achter Rosberg stond, begön et gat too oaverbrüggen döär in Monako en Kanada too winnen vöär respektivelik Daniel Ricciardo en Sebastian Vettel, mår nen ungeval in de kwalifikatsy van de race in Baku en nen probleym med de avstelling van den motor beteakeneden dat hy vyvdes endigeden. Hamilton wön vervölgens den oustenryksken Grand Prix undanks nen botsing med Rosberg in de låtste runde. Nen weak låter, måkeden Hamilton syn dreetal thuusoaverwinningen by den britsken Grand Prix kompleet, wårdöär synen teammåt by Mercedes noch med eyn pünt an de leiding van et kampioonskap stond. Hy kwam an de leiding in et kampioonskap in de völgende race in Hungary en vergröäteden synen vöärsprong når 19 pünten nå in Düütskland, wår Rosberg veerdes endigeden, too winnen.
+Hamilton, den now 43 pünten achter Rosberg stond, begön et gat too oaverbrüggen döär in Monako en Kanada too winnen vöär respektivelik Daniel Ricciardo en Sebastian Vettel, mår nen ungeval in de kwalifikatsy van de race in Baku en nen probleym med de avstelling van den motor beteakeneden dat hy vyvdes endigeden. Hamilton wön vervölgens den oustenryksken Grand Prix undanks nen botsing med Rosberg in de låtste runde. Nen weak låter, måkeden Hamilton syn dreetal thuusoaverwinningen by den britsken Grand Prix kompleet, wårdöär synen teammåt by Mercedes noch med eyn pünt an de leiding van et kampioonskap stond. Hy kwam an de leiding in et kampioonskap in de völgende race in Hungarye en vergröäteden synen vöärsprong når 19 pünten nå in Düütskland, wår Rosberg veerdes endigeden, too winnen.
 
 Mår nå den sommerstop verslechtereden et seisoon van Hamilton. Ümdat Mercedes koos ne party startstravven too aksepteren üm nye underdealen up te bowen, wyr Hamilton verplicht van de 21e positsy too starten in Belgie. Hy håleden vöärdeyl uut kontakt tüsken Vettel, Räikkönen en Verstappen in de eyrste runde döär sich når vöären too ryden in et veld tötdat nen swår ungeval by Eau Rouge wårby Kevin Magnussen betrökken was vöär nen rouden vlag sörgeden. Doo de race sich vöärsetteden, was Nico Rosberg an de leiding van de race töt an et ende by den eblökten vlag, terwyl Hamilton uutendelik as darden endigeden nådat hy Daniel Ricciardo neet had können inhålen. Rosberg verkleineden in de völgende race in Italie de leiding van Hamilton in et kampioonskap töt twey pünten, wårby hy vöärdeyl håleden uut den trågen start vanav de eyrste positsy van Hamilton en vrog de leiding nam dee neet meyr bedreiged wyr tydens de reste van de race. Hamilton veel by den start terüg töt de vyvde positsy, mår herstelleden sich in de oapeningsrunden når de veerde plekke en gebrukeden strategy um uutendelik vöär de Ferraris van Vettel en Räikkönen too endigen.
 [[Bestaand:Lewis_Hamilton_engine_failure_2016_Malaysian_GP_2.jpg|rechts|duum|Et fålen van den motor van Hamilton in Maleysie was nen belangryk moment in et gevecht üm et kampioonskap.]]
 Rosberg nam de leiding weader oaver in Singapore, den sich kwalificereden vöär de eyrste startpositsy terwyl Hamilton mos ryden vöär de darde positsy nådat hy mechanisken probleymen had ehad en ryfouten had emåked. Hamilton lek de leiding weader oaver too nemmen nå ruum an de leiding too hebben ereden in den maleysisken Grand Prix, mår hy gav up 16 runden vöär et ende van de race med fålen van den motor, wårdöär Daniel Ricciardo an de leiding kwam van de race, terwyl Rosberg dardes endigeden, wårmed hy syne leiding in et kampioonskap uutbreideden når 23 pünten.
 
-Rosberg breideden synen vöärsprong in et kampioonskap wyder uut når 33 points in Japan, wårby hy in de race in eyrste startpositsy vertrök en wön. Meanwhile, Hamilton made another poor start, slipping from second on the grid to eighth by the end of the first lap. He recovered with an alternate pit strategy to reclaim third place going into the final phase of the race but was unable to pass Max Verstappen, and finished in third, meaning that his deficit to Rosberg was now 33 points and that the Championship was no longer in his hands. The result secured Mercedes' third consecutive World Constructors' Championship title.<ref>{{cite news|title=Lewis Hamilton battles to third as Nico Rosberg wins in Japan|url=https://www.bbc.co.uk/sport/formula1/37595520|accessdate=1 December 2016|work=BBC Sport|date=9 October 2016}}</ref> Hamilton began to reduce Rosberg's lead, fronting a Mercedes 1–2 finish in the United States.<ref>{{cite news|title=Lewis Hamilton takes 50th win at United States GP|url=https://www.bbc.co.uk/sport/formula1/37746926|accessdate=1 December 2016|work=BBC Sport|date=23 October 2016}}</ref> Hamilton led another Mercedes 1–2 in Mexico and in Brazil, he dominated a heavily wet race to complete another hat-trick of wins. However, with Rosberg again finishing in second it meant that to win the championship, he would have to win the Abu Dhabi Grand Prix with Rosberg finishing fourth or lower.<ref>{{cite news|title=F1 title race goes to the wire in Abu Dhabi but will Red Bulls have a final say?|url=https://www.theguardian.com/sport/blog/2016/nov/23/f1-title-race-abu-dhabi-mercedes-hamilton-rosberg-red-bull|accessdate=21 May 2018|work=The Guardian|date=23 November 2016}}</ref>
+Rosberg breideden synen vöärsprong in et kampioonskap wyder uut når 33 points in Japan, wårby hy in de race in eyrste startpositsy vertrök en wön. Undertüsken had Hamilton weader nen slechten start, wårby hy terügveel van de tweyde positsy by den start når de achtste an et ende van de eyrste runde. Hy herstelleden sich med ne andere pitstrategy wårdöär hy weader dardes was in et låtste deal van de race mår hy kön Max Verstappen neet inhålen en endigeden as darden, wårdöär hy now nen achterstand van 33 pünten up Rosberg had en hy neet meyr eigenhändig et kampioonskap kön winnen. Dit resultåt verseakereden Mercedes van de darde werldkampioonskapstitel vöär konstrukteurs up nen ry. Hamilton begön de leiding van Rosberg too verminderen döär as eyrsten man in nen 1–2 finish in de Vereynigde Ståten too endigen. Hamilton leidden ok nen 1–2 uutslag van Mercedes in Meksiko en in Brasilie, wår hy de swår verreagende race dominereden en nen ny dreetal oaverwinningen kompleet måkeden. Mår ümdat Rosberg tweyds endigeden in de race, mos Hamilton um et kampioonskap too winnen, den Grouten Prys van Abu Dhabi winnen terwyl Rosberg veerdes ov låger mos endigen.
 
-In Abu Dhabi, Hamilton took pole position ahead of Rosberg, and led him for most of the race.  In the final laps of the race, Hamilton defied team-orders, first from his race engineer and then by the team's technical director, and deliberately slowed to back Nico Rosberg into the chasing pack at end of the race in a bid to encourage rivals Vettel and Verstappen to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1">{{Cite web|url=https://www.bbc.co.uk/sport/formula1/38145250|title=Hamilton did nothing wrong in Abu Dhabi decider|date=29 November 2016|work=BBC Sport|access-date=9 August 2017|language=en-GB}}</ref> However, Rosberg was able hold his position to take second place, enough to win the title with 385 points to Hamilton's 380. Pressed on whether Hamilton could face sanction or even suspension, Toto Wolff replied: "Everything is possible", although no punishment was publicly announced. Others have supported him, on the principle that "drivers are free to race". After the race, Hamilton denied that he had been guilty of any wrongdoing, saying "I don't think I did anything dangerous", "I was in the lead, so I control the pace. Those are the rules."<ref name="auto2">{{cite news|url=https://www.telegraph.co.uk/formula-1/2016/11/27/lewis-hamilton-could-suspended-mercedes-defying-team-orders/|title=Lewis Hamilton could be suspended by Mercedes for defying team orders during dramatic Abu Dhabi finale|date=29 November 2016|work=The Telegraph}}</ref><ref name="auto3">{{cite news|url=https://www.bbc.com/sport/formula1/38145250|title=Lewis Hamilton did nothing wrong in Abu Dhabi decider – BBC Sport|date=29 November 2016|work=BBC News}}</ref>
+In Abu Dhabi behåleden Hamilton de eyrste startpositsy vöär Rosberg en had up hem nen vöärsprong vöär et gröytsten deal van de race.  In de låtste runden van de race ging Hamilton teagen teamorders in, eyrst van synen raceingenieur en dan van den technisk direkteur van et team en hy vertrågeden ekspres üm Nico Rosberg terüg too dringen in de achtervölgende groop an et ende van de ende üm rivålen  Vettel en Verstappen uut too nöydigen üm synen teammåt in too hålen, wat dertoo had eleided dat hy et individuelen kampioonskap sül winnen. Mår Rosberg kön syne positsy vasteholden üm up de tweyde plåtse too endigen, genog üm de titel too winnen med 385 pünten teagenoaver de 380 van Hamilton. Under drük evrågd ov Hamilton ne sanktsy ov sölvs ne uutslüting kön krygen, antwoordeden Toto Wolff: "Alles is möägelik", skonwal der ging strav oapenbår wyr emåked. Anderen hebbet hem estööned med et principe dat "koureurs vry bünt üm too racen". Nå de race ontkenneden Hamilton dat hy sküldig was ewest van slecht gedrag, wårby hy sei "Ik denke neet dat ik wat gevöärliks heb edåne", "Ik was an de leiding, düs ik bepåleden et tempo. So bünt de reagels."
 
-==== 2017 season: Fourth world title ====
-[[Bestaand:Lewis_Hamilton_2017_Catalonia_test_(27_Feb-2_Mar)_Day_1.jpg|rechts|duum|Hamilton during 2017 pre-season testing.]]
-In December 2016, just five days after winning the World Drivers' Championship, Rosberg announced his retirement from the sport.<ref name="auto4">{{cite web|url=https://www.bbc.co.uk/sport/formula1/38185846|title=Nico Rosberg retires: World champion quits Formula 1 five days after title win|date=2 December 2016|publisher=|accessdate=5 March 2017|via=www.bbc.co.uk}}</ref> Williams driver Valtteri Bottas was announced in January as his replacement at Mercedes.<ref>{{cite web|url=https://www.bbc.co.uk/sport/formula1/38489054|title=Valtteri Bottas to partner Lewis Hamilton at Mercedes in 2017 season|date=16 January 2017|publisher=|accessdate=27 March 2017|via=www.bbc.co.uk}}</ref> At the season opener in Australia, Hamilton took pole ahead of Sebastian Vettel and his new teammate Bottas. During the race, he made an early pit stop, coming out behind the Red Bull car of Max Verstappen. Although he was very close to the Red Bull, he failed to pass him for four laps which ultimately led to Vettel being able to take the win, with Hamilton only able to take second.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39396809|title=Sebastian Vettel beats Lewis Hamilton to win Australian Grand Prix|date=26 March 2017|work=BBC Sport|access-date=20 April 2017|language=en-GB}}</ref> This race signalled an end to the Mercedes dominance of the past two seasons.
+==== Et seisoon van 2017: Veerde werldtitel ====
+[[Bestaand:Lewis_Hamilton_2017_Catalonia_test_(27_Feb-2_Mar)_Day_1.jpg|rechts|duum|Hamilton tydens et testen in et vöärseisoon van 2017.]]
+In december 2016, vyv dågen nådat hy et werldkampioonskap had ewönnen, kondigeden Rosberg syne terügtrekking uut de sport an. Williamskoureur Valtteri Bottas wyr in january anekondiged as synen vervanger by Mercedes. By de seisoonsoapening in Australie behåleden Hamilton de eyrste startpositsy vöär Sebastian Vettel en synen nyen teammåt Bottas. Tydens de race, måkeden hy nen vroggen pitstop en kwam der achter den Red Bullwågen van Max Verstappen uut. Skonwal hy seyr dichte by den Red Bull was, lükkeden et hem veer runden lange neet üm dee in too hålen, wat der uutendelik too leideden dat Vettel de oaverwinning kön behålen, terwyl Hamilton slechts as tweyden kön endigen. Disse race köndigeden nen ende an de dominantsy van Mercedes van de vöärbye twey seisoonen an.
 
-In the second race of the season in China, Hamilton again started from pole. Hamilton defended his pole immediately with a rapid and clean start, remaining unchallenged for the remainder of the race.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39538689|title=Lewis Hamilton wins Chinese Grand Prix ahead of Sebastian Vettel|date=9 April 2017|work=BBC Sport|access-date=20 April 2017|language=en-GB}}</ref> As well as taking his 54th career win, Hamilton led every lap and set the fastest lap to give the Mercedes driver his third career Grand Slam.<ref>{{Cite web|url=https://www.formula1.com/en/latest/features/2017/4/shanghai-stats---a-third-grand-slam-for-hamilton.html|title=Shanghai stats – a third 'Grand Slam' for Hamilton|date=9 April 2017|work=Formula1.com|access-date=24 April 2017|language=en-GB}}</ref><ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39538689|title=Lewis Hamilton wins Chinese Grand Prix ahead of Sebastian Vettel|date=9 April 2017|work=BBC Sport|access-date=24 April 2017|language=en-GB}}</ref> Hamilton also equalled Jim Clark's career record of 11 "hat-tricks" – races won from pole while setting the fastest lap – placing him equal second on the all-time list.
+In de tweyde race van et seisoon in China, starteden Hamilton weader vanav de eyrste positsy. Hamilton verdeadigeden syne eyrste positsy metean med nen rappen en foutlosen start en wyr neet meyr bedreiged in de reste van de race. Nevven dat hy de 54ste oaverwinning van syne karriere behåleden, leideden Hamilton alle runden en setteden hy de snelste runde neader, wårdöär den Mercedeskoureur den darden 'Grand Slam' van syne karriere behåleden. Hamilton evenåreden ok et karriererekord van Jim Clark van 11 "dreetallen" – races ewönnen vanav de eyrste startpositsy terwyl hy de rapste runde neaderesettet hevt – wat hem edealed tweyds plåtseden up de ewige lyste.
 
-In Bahrain, the third race of 2017, Hamilton was beaten to pole by his teammate Bottas. He was passed by Vettel off the start and then incurred a five-second penalty for driving too slow in the pit lane, but recovered to finish second behind Championship rival Vettel.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39615516|title=Sebastian Vettel beats Lewis Hamilton in Bahrain thriller|date=16 April 2017|work=BBC Sport|access-date=20 April 2017|language=en-GB}}</ref> After the race he made a public apology to his team for the penalty he received, but also raised concerns over the pace of his car.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39611115|title=Lewis Hamilton happy for 'exceptional' Valtteri Bottas after Bahrain pole|date=15 April 2017|work=BBC Sport|access-date=20 April 2017|language=en-GB}}</ref> At the next race in Sochi, Russia, Hamilton struggled for pace all weekend and qualified in fourth. In the race he finished fourth, while his teammate Bottas took his first ever Grand Prix victory.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39763100|title=Valtteri Bottas wins Russian Grand Prix as Lewis Hamilton struggles|date=30 April 2017|work=BBC Sport|access-date=13 May 2017|language=en-GB}}</ref>
+In Bahrein, de darde race van 2017, wyr Hamilton in den stryd üm de eyrste startpositsy verslågen döär Bottas. Hy wyr inehåled döär Vettel by den start en kreg dan nen strav van vyv sekunden vöär et too langsåm ryden in de pitstråte, mår herstelleden sich üm tweyds too endigeden achter rivål vöär et kampioonskap Vettel. Nå de race veruntsküldigeden hy sich oapenbår by et team vöät den strav den hy untvangen had, mår hy nuumeden ok syne sörgen oaver de snelheyd van synen wågen. In de völgende race in Sotsji, Rüsland, had Hamilton et heyle weakende moite med de snelheyd en kwalificereden hy sich as veerden. In de race endigeden hy as veerden, terwyl synen teammåt Bottas syne eyrste oaverwinning in nen Grand Prix oit behåleden.
 
 Mercedes brought a series of upgrades to their car for the Spanish Grand Prix, and qualifying saw Hamilton take pole ahead of Ferrari's Sebastian Vettel.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39908130|title=Lewis Hamilton on pole position in Spain ahead of Sebastian Vettel|date=13 May 2017|work=BBC Sport|access-date=13 May 2017|language=en-GB}}</ref> Vettel overtook Hamilton going into the first turn, who was unable to pass until Vettel pitted 14 laps later. Hamilton stayed out before pitting under the Virtual Safety Car, gaining time on Vettel who pitted a lap later. Vettel emerged from the pitlane alongside Hamilton, and the pair touched wheels as Hamilton was forced off the track and fell behind Vettel. Hamilton passed Vettel for the lead on lap 44 and held on to win the race, reducing Vettel's lead in the championship to six points and increasing Mercedes' lead in the Constructors' Championship to eight points over Ferrari.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/race-hamilton-beats-vettel-in-spain-to-close-title-race.html|title=Race – Hamilton beats Vettel in Spain to close title race|website=Formula1.com|publisher=Formula One World Championship Ltd|date=14 May 2017|accessdate=15 May 2017}}</ref>
 
-Two weeks later in Monaco, while Ferrari locked out the front row, Hamilton qualified in 14th as he struggled to warm his tyres as well as his final flying lap being impeded by an accident involving Stoffel Vandoorne.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/qualifying---raikkonen-heads-all-ferrari-front-row-in-monaco.html|title=Qualifying – Räikkönen heads all-Ferrari front row in Monaco|website=formula1.com|accessdate=16 June 2017}}</ref> Hamilton recovered to finish seventh, while Vettel passed Räikkönen through the pit-stop phase to win the race and extend his championship lead to 25 points over Hamilton.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/race-monaco-win-extends-vettels-championship-lead.html|title=Race – Monaco win extends Vettel's championship lead|website=formula1.com|accessdate=16 June 2017}}</ref>
+Two weeks later in Monaco, while Ferrari locked out the front row, Hamilton qualified in 14th as he struggled to warm his tyres as well as his final flying lap being impeded by an accident involviånåledeng Stoffel Vandoorne.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/qualifying---raikkonen-heads-all-ferrari-front-row-in-monaco.html|title=Qualifying – Räikkönen heads all-Ferrari front row in Monaco|website=formula1.com|accessdate=16 June 2017}}</ref> Hamilton recovered to finish seventh, while Vettel passed Räikkönen through the pit-stop phase to win the race and extend his championship lead to 25 points over Hamilton.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/race-monaco-win-extends-vettels-championship-lead.html|title=Race – Monaco win extends Vettel's championship lead|website=formula1.com|accessdate=16 June 2017}}</ref>
 [[Bestaand:First_corner,_GP_of_Canada_2017_(35203105871).jpg|links|duum|Hamilton won the 2017 Canadian Grand Prix from pole to record Mercedes' first 1–2 finish of the season]]
 After that result, Hamilton took pole in Canada, equalling his hero Ayrton Senna with the 65th of his career. He was presented with one of Senna's old helmets, a gift from the late Brazilian's family for equalling his record. Upon receiving the gift, Hamilton was speechless for a moment, before saying "I'm shaking. Ayrton, I know for many of you was your favourite driver and he was for me. He inspired me to be where I am today so to receive this is the greatest honour".<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/40225237|title=Lewis Hamilton top in Canadian Grand Prix first practice|date=9 June 2017|work=BBC Sport|access-date=10 June 2017|language=en-GB}}</ref> Hamilton won, leading every lap of the race and setting the fastest lap for his second Grand Slam of the season.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/40241886|title=Lewis Hamilton wins in Canada for sixth time|date=11 June 2017|work=BBC Sport|access-date=13 June 2017|language=en-GB}}</ref>
 
@@ -215,7 +215,7 @@ Hamilton is regarded as one of the most complete drivers on the grid. The all-ti
 
 Hamilton is regarded as one of the best wet-weather drivers in the sport, with some of his best performances occurring in those conditions. Perhaps most notable of these performances was the [//en.wikipedia.org/wiki/2008_British_Grand_Prix 2008 British Grand Prix]<ref>{{Cite web|url=https://www.bailiwickexpress.com/jsy/life/sport-xtra/lewis-hamiltons-9-most-memorable-races-ever-he-wins-his-third-f1-championship-title/|title=Lewis Hamilton most memorable races|date=2016|work=Bailiwick Express|access-date=9 August 2017|language=en-GB|deadurl=yes|archiveurl=https://web.archive.org/web/20170810012036/https://www.bailiwickexpress.com/jsy/life/sport-xtra/lewis-hamiltons-9-most-memorable-races-ever-he-wins-his-third-f1-championship-title/|archivedate=10 August 2017|df=dmy-all}}</ref> where he won by over a minute from [//en.wikipedia.org/wiki/Nick_Heidfeld Nick Heidfeld], the largest margin of victory recorded since the [//en.wikipedia.org/wiki/1995_Australian_Grand_Prix 1995 Australian Grand Prix].<ref>{{Cite web|url=http://www.grandprix.com/race/r794racereport.html|title=Lewis shows his class|date=2008|work=grandprix.com|access-date=9 August 2017|language=en-GB|archive-url=https://web.archive.org/web/20160401223304/http://www.grandprix.com/race/r794racereport.html|archive-date=1 April 2016|dead-url=yes|df=dmy-all}}</ref>
 
-Earlier in his career, Hamilton was criticised for being hot-headed at times, as demonstrated when he was disqualified in Imola in the [//en.wikipedia.org/wiki/GP2_Series GP2 Series] for overtaking the safety car, something he would go on to repeat four years later in Formula One at the [//en.wikipedia.org/wiki/2010_European_Grand_Prix 2010 European Grand Prix] in Valencia.<ref name="auto7">{{Cite news|url=http://sportsworld.nbcsports.com/lewis-hamilton-racer-mercedes-comfortable-in-own-fame-will-buxton/|title=The Complete Driver|work=NBC Sports|access-date=9 August 2017|language=en-GB}}</ref> Later in his career, however, Hamilton has shown greater maturity, while maintaining his ruthlessness and aggression. He divided public and former drivers' opinions in the final race of the {{F1|2016}} season, where from the lead, he defied team-orders and deliberately slowed to back Nico Rosberg into the chasing pack at end of the race in a bid to encourage their rivals to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1" />
+Earlier in his career, Hamilton was criticised for being hot-headed at times, as demonstrated when he was disqualified in Imola in the [//en.wikipedia.org/wiki/GP2_Series GP2 Series] for overtaking the safety car, something he would go on to repeat four years later in Formula One at the [//en.wikipedia.org/wiki/2010_European_Grand_Prix 2010 European Grand Prix] in Valencia.<ref name="auto7">{{Cite news|url=http://sportsworld.nbcsports.com/lewis-hamilton-racer-mercedes-comfortable-in-own-fame-will-buxton/|title=The Complete Driver|work=NBC Sports|access-date=9 August 2017|language=en-GB}}</ref> Later in his career, however, Hamilton has shown greater maturity, while maintaining his ruthlessness and aggression. He divided public and former drivers' opinions in the final race of the {{F1|2016}} season, where from the lead, he defied team-orders and deliberately slowed to back Nico Rosberg into the chasing pack at end of the race in a bid to encourage their rivals to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1">{{Cite web|url=https://www.bbc.co.uk/sport/formula1/38145250|title=Hamilton did nothing wrong in Abu Dhabi decider|date=29 November 2016|work=BBC Sport|access-date=9 August 2017|language=en-GB}}</ref>
 
 === Reception ===
 Hamilton is often considered the best driver of his generation,<ref name="auto8">{{cite news|url=http://time.com/lewis-hamilton-formula-one/|title=The fastest man on wheels|last=Gregory|first=Sean|date=20 December 2016|work=Time Magazine|accessdate=9 August 2017}}</ref><ref name="auto9">{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/11954394/Lewis-Hamilton-has-proved-himself-to-be-the-best-F1-driver-of-his-generation.html|title=Lewis Hamilton has proved himself to be the best F1 driver of his generation|last=Coulthard|first=David|date=26 October 2015|work=The Telegraph|accessdate=9 August 2017}}</ref><ref>{{cite news|url=http://www.gpupdate.net/en/f1-news/207863/hamilton-megastar-of-generation-brundle/|title='Hamilton megastar of generation' – Brundle|date=6 March 2009|work=gpupdate.net|accessdate=9 August 2017}}</ref> and widely regarded as one of the greatest Formula One drivers in the history of the sport.<ref>{{cite news|url=https://www.bbc.co.uk/sport/formula1/18096591|title=Formula One's Greatest Drivers|last=Benson|first=Andrew|date=22 May 2012|work=BBC Sport|accessdate=11 December 2016}}</ref><ref>{{cite web|url=http://f1greatestdrivers.autosport.com/?driver=17|title=Formula 1's Greatest Drivers – Lewis Hamilton|work=Autosport|accessdate=9 April 2017}}</ref><ref>{{cite web|url=http://www.f1-grandprix.com/?page_id=3256|title=Top 15 All Time Drivers|work=F1-Grand Prix|accessdate=11 December 2016}}</ref> Often considered among the greatest British drivers in Formula One, Hamilton is the most successful, having [//en.wikipedia.org/wiki/List_of_Formula_One_Grand_Prix_winners more race victories than any other British driver] in the history of Formula One and matching [//en.wikipedia.org/wiki/Jim_Clark Jim Clark] and [//en.wikipedia.org/wiki/Alain_Prost Alain Prost]'s five [//en.wikipedia.org/wiki/British_Grand_Prix British Grand Prix] victories.<ref>{{cite web|url=https://www.theguardian.com/sport/2017/jul/16/lewis-hamilton-wins-british-grand-prix-mercedes-sebastian-vettel|title=Lewis Hamilton delivers F1 driving masterclass to win British Grand Prix|work=The Guardian|accessdate=9 April 2017}}</ref><ref>{{cite web|url=https://www.theguardian.com/sport/2017/jul/16/lewis-hamilton-british-grand-prix|title=Lewis Hamilton proud to rank among F1 greats after British Grand Prix win|work=The Guardian|accessdate=9 April 2017}}</ref> His jet-set lifestyle and interests outside Formula One have been criticised, however, figures in the sport such as [//en.wikipedia.org/wiki/Emerson_Fittipaldi Emerson Fittipaldi] and [//en.wikipedia.org/wiki/Christian_Horner Christian Horner] have voiced their support for Hamilton's ability to connect with fans. Bernie Ecclestone has frequently commented on his admiration of Hamilton's ability to promote the sport through his lifestyle, noting how he is happy to engage with fans, unlike some of his peers.<ref>{{cite web|url=https://www.theguardian.com/sport/2016/oct/30/lewis-hamilton-formula-one-emerson-fittipaldi|title=Lewis Hamilton is a great example for the other F1 drivers, says Emerson Fittipaldi|work=The Guardian|accessdate=9 April 2017}}</ref> Since Hamilton's rookie season in 2007, Formula One's annual global revenue has risen by 53%, to $1.83&nbsp;billion as of 31 July 2016.<ref name="auto8" />
@@ -252,9 +252,9 @@ After Austin, Rosberg went on a seven-race winning streak, which included the fi
 [[File:Rosberg_Hamilton_-_2016_Monaco_GP_2.jpg|links|duum|Hamilton ''(background)'' thanked Rosberg for obeying team orders and letting him pass at the [//en.wikipedia.org/wiki/2016_Monaco_Grand_Prix 2016 Monaco Grand Prix].]]
 In Austria, Rosberg, struggling with a brake issue, looked on course to record the best win of his career. But in the final laps Hamilton closed in and a mistake from Rosberg at Turn 1 on the last lap gave him better drive on the long run to Turn 2. Hamilton picked the outside, moving alongside Rosberg as they approached the corner. As Hamilton turned in to make the corner, Rosberg went straight on, causing a collision and damaging the German's front wing. Hamilton would pass to win the race, while Rosberg would drop to fourth in the final corners. Both drivers blamed the other, while furious team boss Toto Wolff threatened team orders in future races. The stewards blamed Rosberg for the incident, issuing him two penalty points for failing to allow "racing room" and causing a collision.<ref name="auto" />
 
-In the final race of the season in Abu Dhabi, Rosberg entered the round with a twelve-point lead over teammate Hamilton in the World Drivers' Championship. In the final laps of the race, Hamilton defied team-orders, first from his race engineer and then by the team's technical director, and deliberately slowed to back Rosberg into the chasing pack at end of the race in a bid to encourage rivals Vettel and Verstappen to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1" /> Pressed on whether Hamilton could face sanction or even suspension, Toto Wolff replied: "Everything is possible", although no punishment was publicly announced. Others have supported him, on the principle that "drivers are free to race". After the race, Hamilton denied that he had been guilty of any wrongdoing, saying "I don't think I did anything dangerous", "I was in the lead, so I control the pace. Those are the rules."<ref name="auto2" /><ref name="auto3" />
+In the final race of the season in Abu Dhabi, Rosberg entered the round with a twelve-point lead over teammate Hamilton in the World Drivers' Championship. In the final laps of the race, Hamilton defied team-orders, first from his race engineer and then by the team's technical director, and deliberately slowed to back Rosberg into the chasing pack at end of the race in a bid to encourage rivals Vettel and Verstappen to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1" /> Pressed on whether Hamilton could face sanction or even suspension, Toto Wolff replied: "Everything is possible", although no punishment was publicly announced. Others have supported him, on the principle that "drivers are free to race". After the race, Hamilton denied that he had been guilty of any wrongdoing, saying "I don't think I did anything dangerous", "I was in the lead, so I control the pace. Those are the rules."<ref name="auto2">{{cite news|url=https://www.telegraph.co.uk/formula-1/2016/11/27/lewis-hamilton-could-suspended-mercedes-defying-team-orders/|title=Lewis Hamilton could be suspended by Mercedes for defying team orders during dramatic Abu Dhabi finale|date=29 November 2016|work=The Telegraph}}</ref><ref name="auto3">{{cite news|url=https://www.bbc.com/sport/formula1/38145250|title=Lewis Hamilton did nothing wrong in Abu Dhabi decider – BBC Sport|date=29 November 2016|work=BBC News}}</ref>
 
-Just five days later, after winning his first World Drivers' Championship, Rosberg announced his shock retirement from the sport.<ref name="auto4" /> Hamilton said he was not surprised by the announcement, and despite their strained relationship, was still saddened to see his longtime rival leave. "The sport will miss him, but I wish him all the best," Hamilton said. "This is the first time he's won in 18 years, hence why it was not a surprise that he decided to stop. But he's also got a family to focus on and probably wants to have more children. Formula One takes up so much of your time." He also lamented the end of the rivalry between the two, saying "In terms of missing the rivalry, of course because we started karting when we were 13 and we would always talk about being champions. When I joined this team, Nico was there, which was something we spoke about when we were kids. So it's going to be very, very strange, and, for sure, it will be sad to not have him in the team next year."<ref>{{cite web|url=http://autoweek.com/article/formula-one/lewis-hamilton-not-surprised-nico-rosberg-retirement|title=Lewis Hamilton not surprised by Nico Rosberg retirement|date=2 December 2016|publisher=Autoweek|accessdate=11 August 2017}}</ref>
+Just five days later, after winning his first World Drivers' Championship, Rosberg announced his shock retirement from the sport.<ref name="auto4">{{cite web|url=https://www.bbc.co.uk/sport/formula1/38185846|title=Nico Rosberg retires: World champion quits Formula 1 five days after title win|date=2 December 2016|publisher=|accessdate=5 March 2017|via=www.bbc.co.uk}}</ref> Hamilton said he was not surprised by the announcement, and despite their strained relationship, was still saddened to see his longtime rival leave. "The sport will miss him, but I wish him all the best," Hamilton said. "This is the first time he's won in 18 years, hence why it was not a surprise that he decided to stop. But he's also got a family to focus on and probably wants to have more children. Formula One takes up so much of your time." He also lamented the end of the rivalry between the two, saying "In terms of missing the rivalry, of course because we started karting when we were 13 and we would always talk about being champions. When I joined this team, Nico was there, which was something we spoke about when we were kids. So it's going to be very, very strange, and, for sure, it will be sad to not have him in the team next year."<ref>{{cite web|url=http://autoweek.com/article/formula-one/lewis-hamilton-not-surprised-nico-rosberg-retirement|title=Lewis Hamilton not surprised by Nico Rosberg retirement|date=2 December 2016|publisher=Autoweek|accessdate=11 August 2017}}</ref>
 
 == Outside racing ==
 
