*Empty MediaWiki Message*

--- a/Fluitenbarg.mw
+++ b/Fluitenbarg.mw
@@ -1,4 +1,4 @@
-'''Flütenbarg''' ([[Nederlaands|Nederlaandsk]]: ''Fluitenberg'') is en dörp in de [[Nederlaand|nederlaandske]] gemeynte [['t Ogeveine|et Hogeveyne]] in de provincy [[Drenthe|Drente]]. Et hev ümdeby 470 inwoners. De plåtse ligt ten noordwesten van et Hogeveyne, ten noorden van de spoarlynde [[Zwolle-Grönninge|Zwolle-Grönningen]].
+'''Flütenbarg''' ([[Nederlaands|Nederlaandsk]]: ''Fluitenberg'') is en dörp in de [[Nederlaand|nederlaandske]] gemeynte [['t Ogeveine|et Hogeveyne]] in de provincy [[Drenthe|Drente]]. Et hev ümdeby 470 inwoners. De plåtse ligt ten noordwesten van et Hogeveyne, ten noorden van de spoarlynde [[spoarlynde Zwolle-Grönningen|Zwolle-Grönningen]].
 
 {{Dialekt|drt|Hogevene|NSS}}
 [[Kategorie:Plaots in Drenthe]] [[Kategorie:Drèents artikel]]
