*Empty MediaWiki Message*

--- a/Deenkel.mw
+++ b/Deenkel.mw
@@ -4,7 +4,7 @@ De [[Rivier]] n '''Deenkel''' begeent in de [[Duutslaand|Duutse]] [[deelstoat]] 
 
 In Duutslaand hebt ze n Deenkel stoark recht etrökn tusken 1970 en 1980. t Eerste gedeelte binn Neerlaand hef zin oolde gaank beheuldn laanks t [[Lutterzaand]]. Wieterop is'e an epast um inzieging vuur waterwinning makkeliker te maakn. Bie [[Harseveeld]] op t noordwestn van Deanekaamp, steet t [[Skoevnhuuske]], det n Deenkel oonder t kanaal [[Almelo]]-[[Nordhorn]] duurvoort. Zes emesselde kokkers met stoalne skoewn bepoalt hier wovöl water at dr in t kanaal keump.
 
-n Deenkel wörd eneumd in de eerste regel van t Tweantse Volksleed: ''Dr ligt tusken Regge en Deenkel nen laand...''.
+n Deenkel wörd eneumd in de eerste regel van t Tweantse Volksleed: ''Dr ligt tusken Regge en Deenkel een laand...''.
 
 == Leankte en stroomgebeed ==
 n Deenkel is umdebie 93 km laank. Doarvan lignt:
