*Empty MediaWiki Message*

--- a/Harry_Nijhuis.mw
+++ b/Harry_Nijhuis.mw
@@ -1,4 +1,4 @@
-'''Harry Nijhuis''' ([[De Lut]]) is n [[Streektaalfunctionaoris|consuleant]] van de [[Tweants]]e sproake, en verbeunden an de [[TwentseWelle]].
+'''Harry Nijhuis''' ([[De Lut]]) is wetholder in de gemeynde [[Loster]]. Töt [[2018]] was hee [[Streektaalfunctionaoris|consuleant]] van de [[Tweants]]e sproake, en verbeunden an de [[TwentseWelle]].
 
 Hee heuld zik gangs met t bewoaren en oetdreagen van de Tweantse sproake, geet langs skolen um oetleg te gewen oawer lespakketten in t Tweants, en gef zelf Tweantse kursussen.
 
